# tic-tac-toe-hexagonal

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: .pre-commit-config.yaml  config.py  db.py  dependencies.py  entitys.py  enums.py  errors.py  filters.py  hello.py  main.py  models.py  repositories.py  security.py  services.py  websocket.py
migrations/: env.py
migrations/versions/: f688fa6f552d_init.py
templates/: index.html
